tdf#103209 Apply application color settings to Basic IDE

This makes the text and background colors in the editor window
follow the custom colors "Font color" and "Document background"
respectively in Options > LibreOffice > Applications Colors.

... for those who think BASIC looks cooler when written in green
text on black background.

Change-Id: I82647865f7c2915341249c2fd5ebc9bd8d617bd1